[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = { path = "../event_listener" }

[dev-dependencies]
#async-channel = "1.7.1"
flume = "0.10.14"
tokio = { version = "1", features = ["rt", "macros"], default-features = false }
