[package]
name = "local_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.12"
scoped-tls = "1.0.0"
slab = "0.4.7"
thread-id = "4.0.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
