[package]
name = "local_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.0.12"
scoped-tls = "1.0.0"
slab = { version = "0.4.7", default-features = false }
spin = "0.9.8"

[dev-dependencies]
futures = "0.3.25"

[features]
default = []
std = []
